# vs-client

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  GUIDE.md  LICENSE  README.md  devenv.nix  portal_fetch_full.py  pyproject.toml  run_vtop_full.py  settings.gradle.kts
portal_explorer/: __init__.py  session.py
portal_explorer/attendance/: attendance.py
portal_explorer/biometric/: biometric.py
portal_explorer/exam_schedule/: exam_schedule.py
portal_explorer/exceptions/: __init__.py  exception.py
portal_explorer/grade_history/: grade_history.py
portal_explorer/login/: fetch_captcha.py  fetch_csrf_token.py  prelogin.py  student_login.py
portal_explorer/marks/: marks.py
portal_explorer/mentor/: mentor.py
portal_explorer/outing/: general.py  weekend.py
portal_explorer/parsers/: attendance_parser.py  biometric_parser.py  exam_schedule_parser.py  general_outing_requests_parser.py  grade_history_parser.py  marks_parser.py  mentor_parser.py  outing_form_parser.py  payments_receipts_parser.py  pending_payments_parser.py  profile_parser.py  timetable_parser.py  weekend_outing_requests_parser.py
portal_explorer/payments/: payment_receipts.py  pending_payments.py
portal_explorer/profile/: profile.py
portal_explorer/timetable/: timetable.py
portal_explorer/utils/: solve_captcha.py  validate_registration_number.py
student-scraper/: build.gradle.kts  consumer-rules.pro
vitap_vtop_client/: client.py
vitap_vtop_client/exceptions/: __init__.py  exception.py
vitap_vtop_client/login/: student_login.py
(+18 files in other folders)
